# joint-friction-model

./: .gitignore  .project  CMakeLists.txt  README.md  friction_observer.cpp  friction_observer.hpp  friction_plot.ipynb  plot_data.ipynb
.ipynb_checkpoints/: Untitled-checkpoint.ipynb
configs/: constants.yml
data/: static_torque_breakaway_point.csv  v_0-1_readings.csv  v_0-3_readings.csv  v_0-5_readings.csv  v_0-9_readings.csv  v_1-3_readings.csv  velocity_0.010000readings.csv  velocity_0.020000readings.csv  velocity_0.030000readings.csv  velocity_0.040000readings.csv  velocity_0.050000readings.csv  velocity_0.060000readings.csv  velocity_0.090000readings.csv  velocity_0.100000readings.csv  velocity_0.300000readings.csv  velocity_0.500000readings.csv  velocity_0.700000readings.csv  velocity_0.900000readings.csv  velocity_1.300000readings.csv  velocity_1.500000readings.csv
data/static_data/: readings.csv  static_torque_breakaway_point.csv
include/: data_collector.hpp  data_reader.hpp  friction_controller.hpp  friction_observer.hpp  torque_controller.hpp
python files/: Friction fitting.ipynb  friction_plot.ipynb
python files/.ipynb_checkpoints/: plot_data-checkpoint.ipynb
python_files/: friction.py  learning_model.py  plot_dynamic_data.py
src/: data_collector.cpp  data_reader.cpp  friction.py  friction_controller.cpp  friction_observer.cpp  learning_model.py  main_kinova.cpp  plot_dynamic_data.py  test.cpp  torque_controller.cpp
